--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,63 @@
 {
-  "include": ["src"],
-  "compilerOptions": {
-    "skipLibCheck": true,
-    "module": "esnext",
-    "lib": ["dom", "esnext"],
-    "importHelpers": true,
-    "declaration": true,
-    "sourceMap": true,
-    "rootDir": "./src",
-    "strict": true,
-    "noImplicitAny": false,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictPropertyInitialization": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": false,
-    "noFallthroughCasesInSwitch": true,
-    "moduleResolution": "node",
-    "baseUrl": "./",
-    "jsx": "react",
-    "esModuleInterop": true
-  }
+    "compilerOptions": {
+        "allowJs": false,
+        "allowSyntheticDefaultImports": true,
+        "allowUnreachableCode": false,
+        "allowUnusedLabels": false,
+        "alwaysStrict": true,
+        "declaration": true,
+        "declarationDir": "./dist/types",
+        "disableSizeLimit": true,
+        "esModuleInterop": false,
+        "forceConsistentCasingInFileNames": true,
+        // "importsNotUsedAsValues": "error",
+        "inlineSourceMap": false,
+        "inlineSources": false,
+        // "isolatedModules": true,
+        "jsx": "react-jsx",
+        "jsxImportSource": "woby",
+        "lib": [
+            "dom",
+            "esnext",
+            "WebWorker"
+        ],
+        "module": "esnext",
+        "moduleResolution": "node",
+        "newLine": "lf",
+        "noEmitOnError": false,
+        "noImplicitThis": true,
+        "noPropertyAccessFromIndexSignature": false,
+        "noUnusedLocals": false,
+        "noUnusedParameters": false,
+        "outDir": "dist",
+        "pretty": true,
+        "skipDefaultLibCheck": true,
+        "skipLibCheck": true,
+        "sourceMap": false,
+        "strict": true,
+        "strictBindCallApply": true,
+        "strictFunctionTypes": true,
+        "strictNullChecks": false,
+        "target": "es2020",
+        "useDefineForClassFields": false,
+        "useUnknownInCatchVariables": true,
+        "noImplicitAny": false,
+        "noUncheckedIndexedAccess": false,
+        "baseUrl": ".",
+        "rootDir": "./src",
+        "typeRoots": [
+            "types"
+        ],
+        // "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo",
+        // "composite": true,
+    },
+    "exclude": [
+        "dist/",
+        "docs",
+        "**/*.test.ts",
+        "vite.config.ts",
+        "vite.config.web.ts",
+        "tailwind.config.ts",
+        "assets"
+    ]
 }
